--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,100 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="wrapper">
+    <header>
+      <div class="logo">
+
+      </div>
+      <div class="title">
+
+      </div>
+      <section class="utilities">
+          <div class="utilities__ftvi">
+
+          </div>
+          <div class="utilities__search">
+
+          </div>
+      </section>
+
+    </header>
+    <div class="wrapper front">
+        <aside>
+            <nav>
+    
+            </nav>
+            <div class="widgets">
+    
+            </div>
+        </aside>
+        <main>
+          <div class="front__slider">
+
+          </div>
+          <div class="front__content">
+            <section class="front__news">
+              <h2>Новости</h2>
+              <article>
+                <div class="front__news-date">
+                  03 апреля
+                </div>
+                <div class="front__news-foto">
+                  <img src="img.jpg" alt="Фото">
+                </div>
+                <div class="front__news-title">
+                  <a href="#">Заголовок новости 1</a>
+                </div>
+                <div class="front__news-more">
+                    <a href="#">Далее...</a>
+                </div>
+              </article>  
+              <article>
+                  <div class="front__news-date">
+                    03 апреля
+                  </div>
+                  <div class="front__news-foto">
+                    <img src="img\bg-r.jpg" alt="Фото">
+                  </div>
+                  <div class="front__news-title">
+                      <a href="#">Заголовок новости 2</a>
+                  </div>
+                  <div class="front__news-more">
+                      <a href="#">Далее...</a>
+                  </div>
+                </article>  
+                <div class="front__news-all">
+                  <a href="#">Все новости...</a>
+                </div>            
+            </section>
+            <section class="front__anounce">
+              <h2>Объявления</h2>
+              <article>
+                <div class="front__anounce-title">
+                  <a href="#">Заголовок объявления 1</a>
+                </div>
+                <div class="front__anounce-more">
+                  <a href="#">Далее...</a>
+                </div>
+              </article>
+              <article>
+                  <div class="front__anounce-title">
+                    <a href="#">Заголовок объявления 2</a>
+                  </div>
+                  <div class="front__anounce-more">
+                    <a href="#">Далее...</a>
+                  </div>
+                </article>
+              <div class="front__anounce-all">
+                  <a href="#">Все объявления...</a>
+                </div> 
+            </section>
+          </div>
+        </main>
+    </div>
+  </div>
+  <footer>
+
+  </footer>
 </body>
 </html>
