--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css\style.css">
   <title>Document</title>
 </head>
 <body>
   <div class="wrapper">
     <header>
       <div class="logo">
-
+        <img src="img/logo.png" alt="Лого">
       </div>
       <div class="title">
 
@@ -25,10 +28,10 @@
       </section>
 
     </header>
-    <div class="wrapper front">
+    <div class="front">
         <aside>
             <nav>
-    
+              <h3>Навигация</h3>
             </nav>
             <div class="widgets">
     
@@ -36,71 +39,85 @@
         </aside>
         <main>
           <div class="front__slider">
-
+            <div class="front__slider__img">
+              <a href="#"><img src="upload/img01.jpg" alt=""></a>
+            </div>
+            <div class="front__slider__info">
+              <div class="front__slider__info--title">
+                <h3>Заголовок новости 1</h3>            
+              </div>
+              <div class="front__slider__info--toggle">
+                <span class="backward">&larr;</span>
+                <span class="forward">&rarr;</span>
+              </div>
+            </div>
           </div>
           <div class="front__content">
             <section class="front__news">
               <h2>Новости</h2>
               <article>
-                <div class="front__news-date">
+                <div class="front__news--date">
                   03 апреля
                 </div>
-                <div class="front__news-foto">
+                <div class="front__news--foto">
                   <img src="img.jpg" alt="Фото">
                 </div>
-                <div class="front__news-title">
+                <div class="front__news--title">
                   <a href="#">Заголовок новости 1</a>
                 </div>
-                <div class="front__news-more">
+                <div class="front__news--more">
                     <a href="#">Далее...</a>
                 </div>
               </article>  
               <article>
-                  <div class="front__news-date">
+                  <div class="front__news--date">
                     03 апреля
                   </div>
-                  <div class="front__news-foto">
+                  <div class="front__news--foto">
                     <img src="img\bg-r.jpg" alt="Фото">
                   </div>
-                  <div class="front__news-title">
+                  <div class="front__news--title">
                       <a href="#">Заголовок новости 2</a>
                   </div>
-                  <div class="front__news-more">
+                  <div class="front__news--more">
                       <a href="#">Далее...</a>
                   </div>
                 </article>  
-                <div class="front__news-all">
+                <div class="front__news--all">
                   <a href="#">Все новости...</a>
                 </div>            
             </section>
             <section class="front__anounce">
               <h2>Объявления</h2>
               <article>
-                <div class="front__anounce-title">
+                <div class="front__anounce--title">
                   <a href="#">Заголовок объявления 1</a>
                 </div>
-                <div class="front__anounce-more">
+                <div class="front__anounce--more">
                   <a href="#">Далее...</a>
                 </div>
               </article>
               <article>
-                  <div class="front__anounce-title">
+                  <div class="front__anounce--title">
                     <a href="#">Заголовок объявления 2</a>
                   </div>
-                  <div class="front__anounce-more">
+                  <div class="front__anounce--more">
                     <a href="#">Далее...</a>
                   </div>
                 </article>
-              <div class="front__anounce-all">
+              <div class="front__anounce--all">
                   <a href="#">Все объявления...</a>
                 </div> 
             </section>
           </div>
+          <section class="front__links">
+            <h2>Ссылки</h2>
+          </section>
         </main>
     </div>
   </div>
   <footer>
-
+    <h3>Подвал</h3>
   </footer>
 </body>
 </html>
