--- a/index.html
+++ b/index.html
@@ -57,30 +57,46 @@
               <h2>Новости</h2>
               <article>
                 <div class="front__news--date">
-                  03 апреля
+                  <div class="front__news--day">
+                    <span>13</span>
+                  </div>
+                  <div class="front__news--month">
+                    <span>04</span>
+                  </div>
+                  <div class="front__news--year">
+                    <span>18</span>
+                  </div>                  
                 </div>
                 <div class="front__news--foto">
                   <img src="img.jpg" alt="Фото">
                 </div>
                 <div class="front__news--title">
                   <a href="#">Заголовок новости 1</a>
-                </div>
-                <div class="front__news--more">
-                    <a href="#">Далее...</a>
+                  <div class="front__news--more">
+                      <a href="#">Далее...</a>
+                  </div>
                 </div>
               </article>  
               <article>
                   <div class="front__news--date">
-                    03 апреля
+                    <div class="front__news--day">
+                      <span>12</span>
+                    </div>
+                    <div class="front__news--month">
+                      <span>04</span>
+                    </div>
+                    <div class="front__news--year">
+                      <span>18</span>
+                    </div>                        
                   </div>
                   <div class="front__news--foto">
                     <img src="img\bg-r.jpg" alt="Фото">
                   </div>
                   <div class="front__news--title">
-                      <a href="#">Заголовок новости 2</a>
-                  </div>
-                  <div class="front__news--more">
+                    <a href="#">Заголовок новости 2</a>
+                    <div class="front__news--more">
                       <a href="#">Далее...</a>
+                    </div>                      
                   </div>
                 </article>  
                 <div class="front__news--all">
