--- a/index.html
+++ b/index.html
@@ -4,26 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="img\favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css\style.css">
-  <title>Document</title>
+  <title>ГАУ ДО «ДЮСШ «Рекорд»</title>
 </head>
 <body>
   <div class="wrapper">
     <header>
       <div class="logo">
-        <img src="img/logo.png" alt="Лого">
+        <a href="/">
+          <img src="img/logo.png" alt="Лого">
+        </a>
       </div>
       <div class="title">
-
+        <a href="/">
+          <h1>Государственное автономное учреждение<br>
+            дополнительного образования<br>
+            «Детско-юношеская спортивная школа «Рекорд»</h1>
+        </a>
       </div>
       <section class="utilities">
           <div class="utilities__ftvi">
-
+            <a href="#">ftvi</a>
           </div>
           <div class="utilities__search">
-
+            <a href="#">Поиск</a>
           </div>
       </section>
 
@@ -67,7 +74,7 @@
                     <span>18</span>
                   </div>                  
                 </div>
-                <div class="front__news--foto">
+                <div class="front__news--foto  size-tmb-225x150">
                   <img src="img.jpg" alt="Фото">
                 </div>
                 <div class="front__news--title">
@@ -89,7 +96,7 @@
                       <span>18</span>
                     </div>                        
                   </div>
-                  <div class="front__news--foto">
+                  <div class="front__news--foto  size-tmb-225x150">
                     <img src="img\bg-r.jpg" alt="Фото">
                   </div>
                   <div class="front__news--title">
